--- a/transform-activity/main.css
+++ b/transform-activity/main.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
 
-body  {
-  font-family: 'Josefin Sans', sans-serif;
+body {
+  font-family: "Josefin Sans", sans-serif;
 }
 main {
   background-color: mediumaquamarine;
@@ -10,6 +10,7 @@ main {
   margin: auto;
   display: flex;
   align-items: center;
+  transform: skewY(-10deg);
 }
 
 main > div {
